kubernetes/mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: "tumblr-sidecar-injector-webhook"
  labels:
    app: k8s-sidecar-injector
    track: prod
webhooks:
- name: "injector.tumblr.com"
  failurePolicy: "Ignore" # we fail "open" if the webhook is down hard
  rules:
  - operations: [ "CREATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  clientConfig:
    # https://github.com/kubernetes/kubernetes/blob/v1.10.0-beta.1/staging/src/k8s.io/api/admissionregistration/v1beta1/types.go#L218
    # note: k8s is smart enough to use 443 or the only exposed port on the service
    # note: this requires the service to serve TLS directly (not thru ingress)
    service:
      name: "k8s-sidecar-injector-prod"
      namespace: "kube-system"
      path: "/mutate"   # what /url/slug to send requests at
    # See README.md for how this was generated!
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZ1ekNDQTZNQ0ZGOUMxZFJaK0xmZFk4LzFuRHpJQWxwZk1TSmNNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1JR1kKTVFzd0NRWURWUVFHRXdKSFFqRVBNQTBHQTFVRUNBd0dURzl1Wkc5dU1ROHdEUVlEVlFRSERBWk1iMjVrYjI0eApHVEFYQmdOVkJBb01FRzV2Ym5OMFlXNWtZWEprYkc5bmFXTXhJREFlQmdOVkJBTU1GMnM0Y3kxemFXUmxZMkZ5CkxXbHVhbVZqZEc5eUxVTkJNU293S0FZSktvWklodmNOQVFrQkZodHpaWEpuWlcxQWJtOXVjM1JoYm1SaGNtUnMKYjJkcFl5NWpiMjB3SUJjTk1qQXhNREUxTVRFeU9EVTJXaGdQTkRjMU9EQTVNVEV4TVRJNE5UWmFNSUdZTVFzdwpDUVlEVlFRR0V3S [...]
